--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+body{
+  background-image: url("/bg.jpg");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: aliceblue;
+}
+.container{
+  width: 90vw;
+  height: 90vh;
+  background-color: rgba(7, 7, 27, 0.542);
+  backdrop-filter: blur(19px) saturate(180%);
+  border-radius: 13px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  display: flex;
+}
+
