--- a/src/Components/list/userInfo/userinfo.css
+++ b/src/Components/list/userInfo/userinfo.css
@@ -1,4 +1,24 @@
 .userInfo{
+padding: 20px;
+display: flex;
+align-items: center;
+justify-content: center;
 
-background-color: beige;
+
+
+.user{
+
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+}
+img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+
+}
+
 }
