search Bar Designed

--- a/src/Components/list/chatList/chatList.css
+++ b/src/Components/list/chatList/chatList.css
@@ -1,4 +1,42 @@
-.chatList{
+.chatlist {
+    .search {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        padding: 20px;
 
-    
+        .searchBar {
+            flex: 1;
+            background-color: rgba(17, 25, 40, 0.5);
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            border-radius: 10px;
+            padding: 20px;
+
+            input {
+                background-color: transparent;
+                border: none;
+                outline: none;
+                color: white;
+                flex: 1;
+            }
+
+            img {
+                width: 20px;
+                height: 20px;
+            }
+
+
+        }
+
+        .add {
+            width: 36px;
+            height: 36px;
+            background-color: rgba(17, 25, 40, 0.5);
+            padding: 10px;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+    }
 }
