--- a/src/Components/list/chatList/chatList.css
+++ b/src/Components/list/chatList/chatList.css
@@ -1,4 +1,9 @@
 .chatlist {
+    flex: 1;
+    overflow: scroll;
+
+
+
     .search {
         display: flex;
         align-items: center;
@@ -39,4 +44,37 @@
             cursor: pointer;
         }
     }
+
+    .item {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        padding: 20px;
+        cursor: pointer;
+        border-bottom: 1px solid #dddddd35;
+
+
+        img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            object-fit: cover;
+
+        }
+        .texts{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            span{
+
+                font-weight: 500;
+            }
+            p{
+                font-size: 14px;
+                font-weight: 300;
+            }
+        }
+    }
+
 }
