--- a/src/Components/chat/chat.css
+++ b/src/Components/chat/chat.css
@@ -1,5 +1,108 @@
-.chat{
-    flex:1;
+.chat {
+    flex: 1;
     border-left: 1px solid #dddddd35;
     border-right: 1px solid #dddddd35;
+    height: 100%;
+
+
+    .top {
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid #dddddd35;
+
+        .user {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            img {
+
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            .texts {
+
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+
+                span {
+
+                    font-size: 18px;
+                    font-weight: bold;
+                }
+
+                p {
+                    font-size: 14px;
+                    font-weight: 300;
+                    color: #a5a5a5;
+
+                }
+            }
+        }
+
+        .icons {
+            display: flex;
+            gap: 20px;
+
+
+            img {
+                height: 20px;
+                width: 20px;
+                cursor: pointer;
+            }
+
+
+        }
+
+
+    }
+
+    .center {}
+
+    .bottom {
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-top: 1px solid #dddddd35;
+        gap: 20px;
+
+        .icons {
+            display: flex;
+            gap: 20px;
+
+        }
+        img {
+            height: 20px;
+            width: 20px;
+            cursor: pointer;
+        }
+
+        input {
+            flex: 1;
+            background-color: rgba(17, 25, 40, 0.5);
+            border: none;
+            outline: none;
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 16px;
+
+        }
+        .sendButton{
+
+            background-color:#5183fe;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    }
 }
