--- a/src/Components/chat/chat.css
+++ b/src/Components/chat/chat.css
@@ -3,6 +3,8 @@
     border-left: 1px solid #dddddd35;
     border-right: 1px solid #dddddd35;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 
 
     .top {
@@ -63,15 +65,21 @@
 
     }
 
-    .center {}
+    .center {
+        padding: 20px;
+        flex: 1;
+
+    }
 
     .bottom {
+
         padding: 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         border-top: 1px solid #dddddd35;
         gap: 20px;
+        margin-top: auto ;
 
         .icons {
             display: flex;
@@ -94,6 +102,17 @@
             border-radius: 10px;
             font-size: 16px;
 
+        }
+        .emoji{
+
+            position: relative;
+
+
+            .picker{
+                position: absolute;
+                bottom: 50px;
+                left: 0;
+            }
         }
         .sendButton{
 
