--- a/src/Components/list/chatList/chatList.css
+++ b/src/Components/list/chatList/chatList.css
@@ -1,14 +1,22 @@
 .chatlist {
     flex: 1;
-    overflow: scroll;
+    overflow-y: scroll;
+    scrollbar-color:   #dddddd35 rgba(17, 25, 40, 0.5);
+    
+    backdrop-filter: blur(10px) saturate(180%);
 
+    
 
 
     .search {
+      
         display: flex;
         align-items: center;
         gap: 20px;
         padding: 20px;
+        border-bottom: 1px solid #dddddd35;
+
+
 
         .searchBar {
             flex: 1;
@@ -18,6 +26,7 @@
             gap: 20px;
             border-radius: 10px;
             padding: 20px;
+
 
             input {
                 background-color: transparent;
@@ -61,16 +70,18 @@
             object-fit: cover;
 
         }
-        .texts{
+
+        .texts {
             display: flex;
             flex-direction: column;
             gap: 10px;
 
-            span{
+            span {
 
                 font-weight: 500;
             }
-            p{
+
+            p {
                 font-size: 14px;
                 font-weight: 300;
             }
