--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,8 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 body{
-  /* background-image: url("/bg.jpg"); */
-  background: #0f0c29;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  background-image: url("/sbg.jpg");
+  background-size: 100% 100%;
   display: flex;
   align-items: center;
   justify-content:center;
