--- a/src/Components/chat/chat.css
+++ b/src/Components/chat/chat.css
@@ -5,7 +5,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    
+
 
 
     .top {
@@ -70,7 +70,65 @@
     .center {
         padding: 20px;
         flex: 1;
-        
+        overflow-y: scroll;
+        scrollbar-color: #f5f0f035 rgba(17, 25, 40, 0.5);
+       
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .message {
+            max-width: 70%;
+            display: flex;
+            gap: 20px;
+
+
+            &.own {
+
+                align-self: flex-end;
+
+                .texts {
+                    p {
+                        background-color: #5183fe;
+                    }
+                }
+            }
+
+            img {
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            .texts {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 5px;
+
+                img{
+                    width: 100%;
+                    height: 300%;
+                    border-radius: 10px;
+                    object-fit: cover;
+                }
+
+                
+
+
+                p {
+                    padding: 20px;
+                    background-color: rgba(17, 25, 40, 0.3);
+                    border-radius: 10px;
+                }
+
+                span {
+                    font-size: 13px;
+                }
+            }
+        }
+
 
     }
 
@@ -83,13 +141,14 @@
         justify-content: space-between;
         border-top: 1px solid #dddddd35;
         gap: 20px;
-        margin-top: auto ;
+        margin-top: auto;
 
         .icons {
             display: flex;
             gap: 20px;
 
         }
+
         img {
             height: 20px;
             width: 20px;
@@ -107,20 +166,22 @@
             font-size: 16px;
 
         }
-        .emoji{
+
+        .emoji {
 
             position: relative;
 
 
-            .picker{
+            .picker {
                 position: absolute;
                 bottom: 50px;
                 left: 0;
             }
         }
-        .sendButton{
 
-            background-color:#5183fe;
+        .sendButton {
+
+            background-color: #5183fe;
             color: white;
             padding: 10px 20px;
             border: none;
