--- a/src/Components/detail/detail.css
+++ b/src/Components/detail/detail.css
@@ -6,7 +6,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 20px; 
+        gap: 15px; 
         border-bottom: 1px solid #dddddd35;
 
         img{
@@ -20,7 +20,7 @@
     
     .info{
         padding: 20px;
-        gap: 20px;
+        gap: 25px;
         display: flex;
         flex-direction: column;
 
@@ -87,7 +87,7 @@
     
         button{
 
-            padding: 10px 20px;
+            padding: 15px;
             background-color: rgba(200, 15, 15, 0.367);
             color:white;
             border: none;
@@ -96,6 +96,13 @@
 
             &:hover{
                 background-color: rgba(240, 8, 54, 0.889);
+            }
+
+            &.logout{
+
+                padding: 10px;
+                background-color: #1a73e8;
+
             }
         }
     }
