--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 body{
-  background-image: url("/sbg.jpg");
-  background-size: 100% 100%;
-  
+  background: url("https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-dark-wwdc-2020-3840x2160-1432.jpg");
+  background-size: cover;
+  background-attachment: fixed;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content:center;
   height: 100vh;
-  color: aliceblue;
+
 }
 .container{
   width: 80vw;
