--- a/src/Components/login/login.css
+++ b/src/Components/login/login.css
@@ -1,73 +1,128 @@
-.login {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  gap: 100px;
 
+.wrapper {
+    width: 420px;
+    color: white;
+    /* background-color: rgba(16, 17, 34, 0.395); */
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    border-radius: 10px;
+    padding: 30px 40px;
+    text-align: center;
+}
 
-  .item {
-    flex: 1;
+.wrapper h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.wrapper .tabs {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
     gap: 20px;
+    margin-bottom: 20px;
+}
 
-    form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
+.tabs button {
+    padding: 10px 20px;
+    border: none;
+    background-color: #1f8ef1;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 500;
+}
 
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
 
-      input {
-        padding: 20px;
-        border: none;
-        outline: none;
-        color: white;
-        background-color: rgba(17, 25, 40, 0.6);
-        border: 5PX;
-      }
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 18px;
+    color: white;
+    padding: 20px 45px 20px 20px;
+}
 
-      label {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        cursor: pointer;
-        text-decoration: underline;
+.input-box input::placeholder {
+    color: white;
+}
 
-        img{
+.input-box box-icon {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
 
-          width: 50px;
-          height: 50px;
-          border-radius: 10px;
-          object-fit: cover;
-          opacity: 0.6;
+.remember-forget {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
 
-        }
-      }
-      button{
-        padding: 20px;
-        width: 100%;
-        border: none;
-        background-color: #1f8ef1;
-        color:white;
-        border-radius: 5px;
-        cursor: pointer;
-        font-weight: 500;
-      }
+.remember-forget label input {
+    accent-color: white;
+    margin-right: 5px;
+}
 
+.remember-forget a {
+    color: white;
+    text-decoration: none;
+}
 
-    }
+.remember-forget a:hover {
+    text-decoration: underline;
+}
 
+.btn {
+    width: 100%;
+    height: 45px;
+    background: white;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+}
 
-  }
-  .seprate{
+.register-link {
+     color: white;
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
 
-    height: 80%;
-    width: 2px;
-    background-color: #dddddd35;
-  }
+.register-link p a {
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.register-link p a:hover {
+    text-decoration: underline;
+}
+
+label img {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    object-fit: cover;
+    opacity: 0.6;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
