added usesr data to firebase

--- a/src/Components/login/login.css
+++ b/src/Components/login/login.css
@@ -104,6 +104,7 @@
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
+    cursor: pointer;
 }
 
 .register-link p a {
@@ -111,10 +112,12 @@
     text-decoration: none;
     font-weight: 600;
     font-size: 18px;
+  
 }
 
 .register-link p a:hover {
     text-decoration: underline;
+  
 }
 
 label img {
