--- a/src/index.css
+++ b/src/index.css
@@ -31,4 +31,13 @@ body{
   
 
 }
+.Loading {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid lightblue;
+  border-right-color: orange;
+  animation: s2 1s infinite linear;
+}
+@keyframes s2 {to{transform: rotate(1turn)}}
 
