--- a/src/Components/login/login.css
+++ b/src/Components/login/login.css
@@ -2,7 +2,7 @@
 .wrapper {
     width: 420px;
     color: white;
-    /* background-color: rgba(16, 17, 34, 0.395); */
+   background-color: rgba(0, 0, 0, 0.637);
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
