--- a/src/Components/login/login.css
+++ b/src/Components/login/login.css
@@ -1,18 +1,24 @@
 
 .wrapper {
+    font-size: 14px;
+    font-weight: 300;
     width: 420px;
     color: white;
-   background-color: rgba(0, 0, 0, 0.637);
+     background-color: rgba(0, 0, 0, 0.637);
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     border-radius: 10px;
     padding: 30px 40px;
     text-align: center;
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .wrapper h1 {
-    font-size: 36px;
+    font-size: 30px;
     margin-bottom: 20px;
 }
 
