--- a/src/Components/list/chatList/addUser/addUser.css
+++ b/src/Components/list/chatList/addUser/addUser.css
@@ -1,70 +1,65 @@
-.adduser{
+
+.addUser{
     width: max-content;
     height: max-content;
-    color: white;
     padding: 30px;
-    background:rgba(14,25,40,0.5);
+    background-color: rgba(17, 25, 40, 0.781);
     border-radius: 10px;
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 0;
     left: 0;
+    right: 0;
     margin: auto;
-    
+  
     form{
-        display: flex;
-        gap: 20px;
-
-
-        input{
-            padding: 20px;
-            border-radius: 10px;
-            border: none;
-            outline: none;
-        }
-        
-
-       button{
-
+      display: flex;
+      gap: 20px;
+  
+      input{
         padding: 20px;
         border-radius: 10px;
-        color: white;
+        border: none;
+        outline: none;
+      }
+  
+      button{
+        padding: 20px;
+        border-radius: 10px;
         background-color: #1a73e8;
+        color: white;
         border: none;
         cursor: pointer;
-       }
-
+      }
     }
-
+  
     .user{
-
-        margin-top: 50px;
+      margin-top: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+  
+      .detail{
         display: flex;
         align-items: center;
-        justify-content: space-between;
-
-
-
-        .detail{
-            display: flex;
-            gap: 20px;  
-            align-items: center;
-
-            img{
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                object-fit: cover;
-            }
+        gap: 20px;
+  
+        img{
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          object-fit: cover;
         }
-        button{
-            padding: 20px;
-            border-radius: 10px;
-            color: white;
-            background-color: #1a73e8;
-            border: none;
-            cursor: pointer;
-        }
+      }
+  
+      button{
+        padding: 10px;
+        border-radius: 10px;
+        background-color: #1a73e8;
+        color: white;
+        border: none;
+        cursor: pointer;
+      }
     }
-}
+  }
+  
