--- a/src/Components/list/userInfo/userinfo.css
+++ b/src/Components/list/userInfo/userinfo.css
@@ -3,37 +3,28 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    backdrop-filter: blur(25px) saturate(100%);
-
-
-
+  
     .user {
-
-        display: flex;
-        align-items: center;
-        gap: 20px;
-
-
-        img {
-            height: 50px;
-            width: 50px;
-            border-radius: 50%;
-            object-fit: cover;
-
-        }
-
+      display: flex;
+      align-items: center;
+      gap: 20px;
+  
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
     }
-    .ioncs{
-        display: flex;
-        gap: 20px;
-            
-    }
-    img{
+  
+    .icons {
+      display: flex;
+      gap: 20px;
+  
+      img {
         width: 20px;
         height: 20px;
         cursor: pointer;
+      }
     }
-
-
-
-}
+  }
