--- a/src/Components/details/detail.css
+++ b/src/Components/details/detail.css
@@ -1,7 +1,8 @@
 
 .detail {
     flex: 1;
-  
+    overflow-y: scroll; 
+    scrollbar-color: #f5f0f035 rgba(17, 25, 40, 0.5);
     .user {
       padding: 30px 20px;
       display: flex;
